# ParaCL-snippy

./: .gitignore  CMakeLists.txt  README.md  test.cpp
AST/: CMakeLists.txt
AST/include/: create-basic-node.hpp  read-ast.hpp
AST/src/: thelast.cppm
AST/src/functional/: build-program.cppm  write.cppm
AST/src/nodes/: nodes-type-erasure.cppm  nodes.cppm
AST/tests/: test.cpp
TestGenerator/builder/src/: builder.cppm
TestGenerator/builder/src/name-generator/: name-generator.cppm  name-inserter.cppm  nametable.cppm
TestGenerator/serializer/: CMakeLists.txt  README.md
TestGenerator/serializer/src/: serializer.cppm
basic-settings/: README.md  areas_of_visibility.json  hard_math_print.json  hard_math_print_with_variables.json  if.json  just_a_little_bit_at_a_time without_in.json  just_a_little_bit_at_a_time.json  just_a_little_bit_at_a_time_without_in.json  print_like_expression.json  while.json
src/: main.cpp
src/AST/: CMakeLists.txt  README.md
src/AST/include/: create-basic-node.hpp
src/AST/src/: thelast.cppm
src/AST/src/functional/: graphic-dump.cppm
src/AST/src/nodes/: nodes-traits.cppm  nodes-type-erasure.cppm  nodes.cppm
src/AST/tests/: test.cpp
src/builder/: CMakeLists.txt
src/builder/src/: builder.cppm  create-basic-node.cppm
src/builder/src/name-generator/: name-generator.cppm  nametable.cppm
src/options/: CMakeLists.txt
src/options/src/: options.cppm  read-options.cppm
src/serializer/: CMakeLists.txt
src/serializer/src/: serializer.cppm
src/settings/: CMakeLists.txt
src/settings/src/: read-settings.cppm  settings.cppm
src/tests-generator/: CMakeLists.txt
src/tests-generator/src/: generate-basic-tests.sh.in
test/: areas_of_visibility.json  hard_math_print.json  input.json
