cmake_minimum_required(VERSION 3.30)

project(ParaCL-snippy
    VERSION 1.0
)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(PARACL_SNIPPY_SRC_DIR ${PROJECT_SOURCE_DIR})

# set(PARACL_SNIPPY_SUBPROJECTS_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/subprojects)

# set(PARACL_SNIPPY_TEST_GENERATOR_SRC_DIR ${PROJECT_SOURCE_DIR}/TestGenerator)

# set(PARACL_SNIPPY_TEST_GENERATOR_BINARY_DIR ${PARACL_SNIPPY_SUBPROJECTS_BINARY_DIR}/TestGenerator)

# set(PARACL_SNIPPY_TEST_GENERATOR_EXE paracl-snippy)

# include(ExternalProject)


# ExternalProject_Add(
#     ParaCL-TestGenerator
#     BINARY_DIR ${PARACL_SNIPPY_TEST_GENERATOR_BINARY_DIR}
#     SOURCE_DIR ${PARACL_SNIPPY_TEST_GENERATOR_SRC_DIR}
#     BUILD_COMMAND ${CMAKE_COMMAND} --build <BINARY_DIR>
#     INSTALL_COMMAND ${CMAKE_COMMAND} -E copy "<BINARY_DIR>/paracl-test-generator" "${CMAKE_BINARY_DIR}/${PARACL_SNIPPY_TEST_GENERATOR_EXE}"
#     CMAKE_ARGS -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DCMAKE_EXPORT_COMPILE_COMMANDS=ON #-DCMAKE_TOOLCHAIN_FILE=${CMAKE_TOOLCHAIN_FILE}
#     BUILD_ALWAYS ON
# )


# add_subdirectory(${PARACL_SNIPPY_SRC_DIR}/AST)
add_subdirectory(${PARACL_SNIPPY_SRC_DIR}/TestGenerator/serializer)

add_executable(ser-test
    ${PARACL_SNIPPY_SRC_DIR}/test.cpp
)

target_link_libraries(ser-test
PRIVATE
    ${PARACL_SNIPPY_AST_SERIALIZER_LIB}
)


